--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,106 +7,178 @@ html {
 body {
 	margin: 0;
 	background: #69ff00;
-	background: linear-gradient(180deg, #69ff00 15%, #ffffff 60%);
+	background: linear-gradient(180deg, #69ff00 10%, #ffffff 60%);
+}
+a {
+	text-decoration: none;
+	color: black;
 }
 
+.wrapping {
+	width: 100%;
+	display: inline-block;
+}
 .cont {
 	display: flex;
 	flex-direction: column;
 }
-.cont-center {
+.cont_center {
 	align-items: center;
+}
+.text_center {
+	text-align: center;
+}
+.text_left {
+	text-align: left;
+}
+.text_right {
+	text-align: right;
 }
 .col {
 	display: flex;
 	flex-direction: column;
 }
 .row {
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 }
-.row-1 {
+.row_1 {
 	width: 8.33%;
 }
-.row-2 {
+.row_2 {
 	width: 16.66%;
 }
-.row-3 {
+.row_3 {
 	width: 25%;
 }
-.row-4 {
+.row_4 {
 	width: 33.33%;
 }
-.row-5 {
+.row_5 {
 	width: 41.66%;
 }
-.row-6 {
+.row_6 {
 	width: 50%;
 }
-.row-7 {
+.row_7 {
 	width: 58.33%;
 }
-.row-8 {
+.row_8 {
 	width: 66.66%;
 }
-.row-9 {
+.row_9 {
 	width: 75%;
 }
-.row-10 {
+.row_10 {
 	width: 83.33%;
 }
-.row-11 {
+.row_11 {
 	width: 91.66%;
 }
-.row-12 {
+.row_12 {
 	width: 100%;
 }
 
-.w-100 {
+.w_100 {
 	width: 100%;
 }
-.mt-1 {
+.m_1 {
+	margin: 1rem;
+}
+.mt_1 {
 	margin-top: 1rem;
 }
-.mb-1 {
+.mb_1 {
 	margin-bottom: 1rem;
 }
-.ml-1 {
+.ml_1 {
 	margin-left: 1rem;
 }
-.mr-1 {
+.mr_1 {
 	margin-right: 1rem;
 }
-.mt-2 {
+.m_2 {
+	margin: 2rem;
+}
+.mt_2 {
 	margin-top: 2rem;
 }
-.mb-2 {
+.mb_2 {
 	margin-bottom: 2rem;
 }
-.ml-2 {
+.ml_2 {
 	margin-left: 2rem;
 }
-.mr-2 {
+.mr_2 {
 	margin-right: 2rem;
 }
-.mt-3 {
+.m_3 {
+	margin: 3rem;
+}
+.mt_3 {
 	margin-top: 3rem;
 }
-.mb-3 {
+.mb_3 {
 	margin-bottom: 3rem;
 }
-.ml-3 {
+.ml_3 {
 	margin-left: 3rem;
 }
-.mr-3 {
+.mr_3 {
 	margin-right: 3rem;
 }
-.inp-text {
+.p_1 {
+	padding: 1rem;
+}
+.pt_1 {
+	padding-top: 1rem;
+}
+.pb_1 {
+	padding-bottom: 1rem;
+}
+.pl_1 {
+	padding-left: 1rem;
+}
+.pr_1 {
+	padding-right: 1rem;
+}
+.p_2 {
+	padding: 2rem;
+}
+.pt_2 {
+	padding-top: 2rem;
+}
+.pb_2 {
+	padding-bottom: 2rem;
+}
+.pl_2 {
+	padding-left: 2rem;
+}
+.pr_2 {
+	padding-right: 2rem;
+}
+.p_3 {
+	padding: 3rem;
+}
+.pt_3 {
+	padding-top: 3rem;
+}
+.pb_3 {
+	padding-bottom: 3rem;
+}
+.pl_3 {
+	padding-left: 3rem;
+}
+.pr_3 {
+	padding-right: 3rem;
+}
+.inp_text {
 	width: 100%;
 	font-size: 1rem;
 	border-radius: 5px;
 }
-.inp-button {
+.inp_button {
 	width: 100%;
 	background-color: #66aaff;
 	border-radius: 5px;
@@ -115,13 +187,70 @@ body {
 	padding: 0.5rem 1rem;
 }
 
-
-.login-container {
+/* LOGIN */
+.login_container {
 	background-color: #ffffff;
 	border: #69ff00 solid 2px;
 	padding: 3rem;
 }
-.login_logo {
+.logo {
 	width: 100%;
+}
+.title {
+	font-weight: bold;
+	font-size: 1.3rem;
+	color: #69ff00;
+}
+.title > .cap {
+	padding-right: 0.2rem;
+	font-weight: bolder;
+	font-size: 2.1rem;
+	color: #36ba00;
+}
+
+/* MAIN */
+.sidebar {
+	min-width: 15rem;
+	max-width: 15rem;
+	overflow-y: auto;
+	position: fixed;
+	height: 100%;
+
+	background: linear-gradient(90deg, #36ba00 0%, #50ff00 3%, #aaff80 10%, #ddffcc 15%, #ffffff 20%, #ffffff 80%, #ddffcc 85%, #aaff80 90%, #50ff00 97%, #36ba00 100%);
+}
+.sidebar > ul {
+	padding: 0;
+	text-align: center;
+	list-style-type: none;
+	font-size: 1.1rem;
+}
+.sidebar li {
+	margin: 0.8rem 0;
+}
+.sidebar a:hover {
+	font-weight: bold;
+}
+.sidebar li > div {
+	margin: auto;
+}
+.sidebar > ul .active {
+	font-weight: bold;
+	font-size: 1.3rem;
+}
+.sidebar > ul .icon {
+	text-align: right;
+	font-size: 2rem;
+}
+.sidebar > ul .text {
+	text-align: left;
+}
+.content {
+	margin-left: 15rem;
+}
+/* NAVBAR */
+.navbar {
+	width: auto;
+	padding: 0.4rem 1.2rem;
+	background: linear-gradient(0deg, #36ba00 0%, #ffffff 10%, #eeffcc 100%);
 }
 
