--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,18 +173,36 @@ a {
 .pr_3 {
 	padding-right: 3rem;
 }
-.inp_text {
+.textbox {
 	width: 100%;
 	font-size: 1rem;
 	border-radius: 5px;
 }
-.inp_button {
-	width: 100%;
-	background-color: #66aaff;
+.textbox.txt_sm {
+	font-size: 0.8rem;
+	padding: 0.3rem 0.7rem;
+}
+.button {
+	background-color: #36ba00;
 	border-radius: 5px;
 	font-weight: bold;
-	font-size: 1.2rem;
-	padding: 0.5rem 1rem;
+
+	border: 1px solid #ffffff;
+
+	cursor: pointer;
+}
+.button.disabled {
+	color: #555555;
+	background-color: #77a265;
+	border-color: #000000;
+}
+.button.btn_sm {
+	font-size: 0.8rem;
+	padding: 0.3rem 1rem;
+}
+.button.btn_lg {
+	font-size: 1rem;
+	padding: 0.2rem 1.5rem;
 }
 
 /* LOGIN */
@@ -253,4 +271,15 @@ a {
 	padding: 0.4rem 1.2rem;
 	background: linear-gradient(0deg, #36ba00 0%, #ffffff 10%, #eeffcc 100%);
 }
+/* TABLE */
+.table {
+	width: 100%;
+}
+.table, .table th, .table td {
+	border: 1px solid #000000;
+	border-collapse: collapse;
+
+	padding: 0.5rem;
+}
+
 
