--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 
-
 html {
 	height: 100%;
 	font-family: "Lucida Console", "Courier New", monospace;
@@ -8,10 +7,17 @@ body {
 	margin: 0;
 	background: #69ff00;
 	background: linear-gradient(180deg, #69ff00 10%, #ffffff 60%);
+	background-attachment: fixed;
 }
 a {
 	text-decoration: none;
 	color: black;
+}
+button {
+	background-color: rgba(0,0,0,0);
+	border: 0;
+	cursor: pointer;
+	font-weight: bold;
 }
 
 .wrapping {
@@ -83,104 +89,110 @@ a {
 .w_100 {
 	width: 100%;
 }
+.h_100 {
+	height: 100%;
+}
 .m_1 {
-	margin: 1rem;
+	margin: 1rem !important;
 }
 .mt_1 {
-	margin-top: 1rem;
+	margin-top: 1rem !important;
 }
 .mb_1 {
-	margin-bottom: 1rem;
+	margin-bottom: 1rem !important;
 }
 .ml_1 {
-	margin-left: 1rem;
+	margin-left: 1rem !important;
 }
 .mr_1 {
-	margin-right: 1rem;
+	margin-right: 1rem !important;
 }
 .m_2 {
-	margin: 2rem;
+	margin: 2rem !important;
 }
 .mt_2 {
-	margin-top: 2rem;
+	margin-top: 2rem !important;
 }
 .mb_2 {
-	margin-bottom: 2rem;
+	margin-bottom: 2rem !important;
 }
 .ml_2 {
-	margin-left: 2rem;
+	margin-left: 2rem !important;
 }
 .mr_2 {
-	margin-right: 2rem;
+	margin-right: 2rem !important;
 }
 .m_3 {
-	margin: 3rem;
+	margin: 3rem !important;
 }
 .mt_3 {
-	margin-top: 3rem;
+	margin-top: 3rem !important;
 }
 .mb_3 {
-	margin-bottom: 3rem;
+	margin-bottom: 3rem !important;
 }
 .ml_3 {
-	margin-left: 3rem;
+	margin-left: 3rem !important;
 }
 .mr_3 {
-	margin-right: 3rem;
+	margin-right: 3rem !important;
 }
 .p_1 {
-	padding: 1rem;
+	padding: 1rem !important;
 }
 .pt_1 {
-	padding-top: 1rem;
+	padding-top: 1rem !important;
 }
 .pb_1 {
-	padding-bottom: 1rem;
+	padding-bottom: 1rem !important;
 }
 .pl_1 {
-	padding-left: 1rem;
+	padding-left: 1rem !important;
 }
 .pr_1 {
-	padding-right: 1rem;
+	padding-right: 1rem !important;
 }
 .p_2 {
-	padding: 2rem;
+	padding: 2rem !important;
 }
 .pt_2 {
-	padding-top: 2rem;
+	padding-top: 2rem !important;
 }
 .pb_2 {
-	padding-bottom: 2rem;
+	padding-bottom: 2rem !important;
 }
 .pl_2 {
-	padding-left: 2rem;
+	padding-left: 2rem !important;
 }
 .pr_2 {
-	padding-right: 2rem;
+	padding-right: 2rem !important;
 }
 .p_3 {
-	padding: 3rem;
+	padding: 3rem !important;
 }
 .pt_3 {
-	padding-top: 3rem;
+	padding-top: 3rem !important;
 }
 .pb_3 {
-	padding-bottom: 3rem;
+	padding-bottom: 3rem !important;
 }
 .pl_3 {
-	padding-left: 3rem;
+	padding-left: 3rem !important;
 }
 .pr_3 {
-	padding-right: 3rem;
+	padding-right: 3rem !important;
 }
+
 .textbox {
 	width: 100%;
-	font-size: 1rem;
+	font-size: 1.2rem;
 	border-radius: 5px;
 }
 .textbox.txt_sm {
-	font-size: 0.8rem;
-	padding: 0.3rem 0.7rem;
+	font-size: 1rem;
+}
+.textbox.txt_md {
+	font-size: 1.2rem;
 }
 .button {
 	background-color: #36ba00;
@@ -188,27 +200,123 @@ a {
 	font-weight: bold;
 
 	border: 1px solid #ffffff;
-
+	margin: 0.1rem 0;
 	cursor: pointer;
-}
-.button.disabled {
-	color: #555555;
-	background-color: #77a265;
-	border-color: #000000;
 }
 .button.btn_sm {
 	font-size: 0.8rem;
 	padding: 0.3rem 1rem;
 }
+.button.btn_md {
+	font-size: 0.9rem;
+	padding: 0.4rem 1.2rem;
+}
 .button.btn_lg {
 	font-size: 1rem;
-	padding: 0.2rem 1.5rem;
+	padding: 0.5rem 1.5rem;
+}
+
+/* NOTIFICATIONS */
+.notif_container {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 150;
+	display: block;
+	overflow: auto;
+}
+.notif {
+	background-color: #72ff6e;
+	border: #ffffff solid 2px;
+	border-radius: 15px;
+	margin: auto;
+	margin-top: 3rem;
+	margin-bottom: 2rem;
+	z-index: 101;
+
+	width: 50%;
+	text-align: center;
+	font-size: 1.1rem;
+	padding: 1rem;
+
+	cursor: pointer;
+}
+/* WINDOW */
+.window_container {
+	background-color: rgba(0,0,0,0.3);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	display: none;
+	overflow: auto;
+}
+.window {
+	background-color: #ffffff;
+	border: #69ff00 solid 2px;
+	border-radius: 10px;
+	margin: auto;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	z-index: 101;
+}
+.window.win_sm {
+	width: 30%;
+}
+.window.win_md {
+	width: 45%;
+}
+.window.win_lg {
+	width: 60%;
+}
+.window .win_head {
+	border-bottom: 1px solid #69ff00;
+	padding: 1rem;
+	font-weight: bold;
+	font-size: 1.5rem;
+}
+.window .win_body {
+	padding: 1rem;
+}
+.window .win_foot {
+	border-top: 1px solid #69ff00;
+	padding: 1rem;
+	text-align: right;
+}
+.window .win_close {
+	font-size: 1.2rem;
+	float: right;
+	cursor: pointer;
+}
+/* FORM */
+.form {
+	padding: 0;
+}
+.form .group {
+	padding: 0.4rem 0.8rem;
+}
+.form .label {
+	color: black;
+	font-size: 1.05rem;
+	font-weight: bold;
+}
+.form .input {
+	width: auto;
+	border-radius: 5px;
+	width: 100%;
+	padding: 0.2rem;
+	font-size: 1rem;
 }
 
 /* LOGIN */
 .login_container {
 	background-color: #ffffff;
 	border: #69ff00 solid 2px;
+	border-radius: 10px;
 	padding: 3rem;
 }
 .logo {
@@ -272,6 +380,10 @@ a {
 	background: linear-gradient(0deg, #36ba00 0%, #ffffff 10%, #eeffcc 100%);
 }
 /* TABLE */
+.table_container {
+	display: block;
+	overflow: auto;
+}
 .table {
 	width: 100%;
 }
@@ -281,5 +393,12 @@ a {
 
 	padding: 0.5rem;
 }
-
-
+/* INFO */
+.details {
+	padding: 1rem 0;
+	border-top: 1px solid #000000;
+	border-bottom: 1px solid #000000;
+}
+.details .label {
+	font-weight: bold;
+}
