--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,9 @@ button {
 .text_right {
 	text-align: right;
 }
+.text_md {
+	font-size: 1.3rem;
+}
 .col {
 	display: flex;
 	flex-direction: column;
@@ -377,7 +380,7 @@ button {
 .navbar {
 	width: auto;
 	padding: 0.4rem 1.2rem;
-	background: linear-gradient(0deg, #36ba00 0%, #ffffff 10%, #eeffcc 100%);
+	background: linear-gradient(0deg, #36ba00 0%, #ffffff 10%, #eeffcc 92%, #36ba00 100%);
 }
 /* TABLE */
 .table_container {
@@ -392,6 +395,26 @@ button {
 	border-collapse: collapse;
 
 	padding: 0.5rem;
+}
+@media print {
+	.table_container {
+		position: absolute;
+		top: 0;
+		left: 0;
+		background: white;
+		width: 100%;
+		height: 100%;
+	}
+	.table_exclude {
+		display: none;
+	}
+	/*.table {
+		page-break-inside: auto;
+	}
+	.table tr {
+		page-break-inside: avoid;
+		page-break-after: auto;
+	}*/
 }
 /* INFO */
 .details {
